# dach-marketplace

./: .gitignore  error_detail_force.json  error_detail_retry.json  error_final_debug.json  error_response.json  error_verbose_final.json  failed_error_detail.json  health_response.json  render.yaml
.github/workflows/: ci.yml
backend/: .env.example  Cargo.toml  build_log.txt  openapi.yaml
backend/migrations/: 20241127000001_initial_schema.sql  20241127000002_services_and_projects.sql  20241127000003_messages_and_reviews.sql  20241127000004_seed_categories.sql  20241127000005_add_token_columns.sql  20241127000006_portfolio_items.sql  20241127000007_availability.sql  20241127000008_client_profiles.sql  20241127000009_payments.sql  20241127000010_content_reports.sql  20241128000001_rls_policies.sql  20241128000002_performance_indexes.sql  20241129000001_seed_demo_data.sql  20241130000001_notification_preferences.sql  20241205000001_create_newsletter_subscriptions.sql
backend/src/: lib.rs  main.rs
backend/src/config/: mod.rs
backend/src/db/: mod.rs
backend/src/handlers/: admin.rs  auth.rs  categories.rs  clients.rs  experts.rs  health.rs  messages.rs  mod.rs  newsletter.rs  payments.rs  projects.rs  reports.rs  reviews.rs  search.rs  services.rs  users.rs
backend/src/middleware/: auth.rs  mod.rs  rate_limit.rs  security.rs
backend/src/models/: availability.rs  category.rs  client.rs  expert.rs  message.rs  mod.rs  payment.rs  portfolio.rs  project.rs  report.rs  review.rs  service.rs  user.rs
backend/src/routes/: mod.rs
backend/src/services/: admin_service.rs  availability_service.rs  category_service.rs  client_service.rs  email_service.rs  expert_service.rs  message_service.rs  mod.rs  payment_service.rs  portfolio_service.rs  project_service.rs  report_service.rs  review_service.rs  search_service.rs  service_service.rs  storage_service.rs  user_service.rs
backend/src/utils/: crypto.rs  jwt.rs  mod.rs  slug.rs  validation.rs  vat.rs
backend/tests/: api_auth.rs  api_categories.rs  api_experts.rs  api_health.rs  api_services.rs
backend/tests/common/: mod.rs
frontend/: .env.example  .node-version  index.html  package-lock.json  package.json  vite.config.ts
frontend-fresh/: client.ts  deno.json  main.ts  utils.ts  vite.config.ts
frontend-fresh/components/brand/: Logo.tsx
frontend-fresh/components/home/: CTASection.tsx  CategoriesSection.tsx  ExpertsSection.tsx  FeaturesSection.tsx  HeroSection.tsx  ServicesSection.tsx  StatsSection.tsx
frontend-fresh/components/layout/: Footer.tsx  Header.tsx
frontend-fresh/islands/: ContactExpertButton.tsx  LoginForm.tsx  RegisterForm.tsx  SearchBox.tsx
frontend-fresh/lib/: api.ts  utils.ts
frontend-fresh/routes/: _layout.tsx  about.tsx  index.tsx  search.tsx
frontend-fresh/routes/api/: [...path].tsx
frontend-fresh/routes/auth/: login.tsx  register.tsx
frontend-fresh/routes/categories/: index.tsx
frontend-fresh/routes/experts/: [id].tsx  index.tsx
frontend-fresh/routes/services/: [id].tsx  index.tsx
frontend-fresh/static/: styles.css
frontend-fresh/types/: index.ts
frontend/public/: _redirects  robots.txt
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: ErrorBoundary.tsx
frontend/src/components/a11y/: SkipLink.tsx  index.ts
frontend/src/components/admin/: CategoryManagement.tsx  ContentModeration.tsx  PlatformAnalytics.tsx  index.ts
frontend/src/components/animations/: PageTransition.tsx  index.ts
frontend/src/components/auth/: DashboardRouter.tsx  ProtectedRoute.tsx  index.ts
frontend/src/components/brand/: Logo.tsx  index.ts
frontend/src/components/gdpr/: CookieConsent.tsx
frontend/src/components/layout/: Footer.tsx  Header.tsx  Layout.tsx
frontend/src/components/reviews/: ReviewCard.tsx  ReviewForm.tsx  ReviewStats.tsx  StarRating.tsx  index.ts
frontend/src/components/seo/: SEO.tsx  index.ts
frontend/src/components/ui/: Button.tsx  Card.tsx  Dropdown.tsx  Input.tsx  Modal.tsx  OptimizedImage.tsx  Skeleton.tsx  Textarea.tsx  Toast.tsx  index.ts
frontend/src/hooks/: index.ts  useAdmin.ts  useBreakpoint.ts  useCategories.ts  useExperts.ts  useMessages.ts  usePayments.ts  usePostings.ts  useProjects.ts  useReviews.ts  useSearch.ts  useServices.ts  useUser.ts
frontend/src/i18n/: index.ts
frontend/src/i18n/locales/: de.json  en.json
frontend/src/lib/: confetti.ts  utils.ts
frontend/src/pages/: Admin.tsx  BecomeExpert.tsx  BrowseProjects.tsx  CategoriesPage.tsx  Checkout.tsx  CheckoutCancel.tsx  CheckoutSuccess.tsx  ClientDashboard.tsx  CreatePosting.tsx  CreateService.tsx  ExpertDashboard.tsx  ExpertProfile.tsx  Experts.tsx  ForgotPassword.tsx  Home.tsx  Impressum.tsx  Login.tsx  Messages.tsx  NotFound.tsx  Payments.tsx  PostingDetail.tsx  Postings.tsx  Privacy.tsx  ProjectDetail.tsx  ProjectWorkspace.tsx  Register.tsx  ResetPassword.tsx  Search.tsx  ServiceDetail.tsx  Services.tsx  Settings.tsx  Terms.tsx  VerifyEmail.tsx  index.ts
frontend/src/pages/static/: About.tsx  Contact.tsx  FAQ.tsx  Help.tsx  HowItWorks.tsx  Legal.tsx  Pricing.tsx  index.ts
frontend/src/stores/: authStore.ts
frontend/src/types/: index.ts
