[package]
name = "dach-marketplace-api"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
authors = ["DACH Marketplace Team"]
description = "Blazing fast Rust backend for DACH AI/Automation Marketplace"
license = "MIT"

[dependencies]
# Web Framework
axum = { version = "0.8", features = ["macros", "multipart", "ws"] }
axum-extra = { version = "0.12", features = ["typed-header", "cookie"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip", "limit", "request-id"] }

# Async Runtime
tokio = { version = "1.48", features = ["full", "tracing"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "migrate", "rust_decimal"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Authentication
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
argon2 = "0.5"
sha2 = "0.10"

# Validation
validator = { version = "0.20", features = ["derive"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Environment
dotenvy = "0.15"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error Handling
thiserror = "2"
anyhow = "1.0"

# Search Engine (optional - only loaded if configured)
meilisearch-sdk = { version = "0.31", optional = true }

# Payments (Stripe - optional)
async-stripe = { version = "0.41", features = ["runtime-tokio-hyper"], optional = true }

# Email (optional)
lettre = { version = "0.11", features = ["tokio1-native-tls", "builder"], optional = true }

# File Storage (optional - AWS S3 compatible)
tokio-util = { version = "0.7", features = ["io"] }
aws-sdk-s3 = { version = "1", optional = true }

# Rate Limiting
governor = "0.10"

# Utilities
rand = "0.9"
base64 = "0.22"
regex = "1"
once_cell = "1"
rust_decimal = { version = "1.37", features = ["db-postgres"] }
rust_decimal_macros = "1.37"

[features]
default = []
full = ["search", "payments", "email", "storage"]
search = ["meilisearch-sdk"]
payments = ["async-stripe"]
email = ["lettre"]
storage = ["aws-sdk-s3"]

[dev-dependencies]
tokio-test = "0.4"
fake = { version = "4", features = ["derive"] }
wiremock = "0.6"
dotenvy = "0.15"
tower = { version = "0.5", features = ["util"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

